--- a/src/index.html
+++ b/src/index.html
@@ -69,7 +69,7 @@
 
         <div id="form-div">
           <form class="form-summation" onsubmit="App.createProject(); return false">
-            <h2 id="form-title">Start Your Project Today</h2>
+            <h2 id="form-title">BUIDL Your Project Today</h2>
             <div class="form-group">
               <label for="title">Title</label>
               <input required id="titleInput" type="text" class="form-control" placeholder="Name of Project" maxlength="24">
